--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Bestkeball Stats</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bestkeball Stats Dashboard</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h1>Welcome to Bestkeball Stats</h1>
-  <p>This site will showcase basketball analytics and visualizations.</p>
+  <div class="container">
+    <h1>🏀 Bestkeball Stats Dashboard</h1>
+
+    <section>
+      <h2>Free Throw % Calculator</h2>
+      <input type="number" id="made" placeholder="Free Throws Made" />
+      <input type="number" id="attempted" placeholder="Attempts" />
+      <button onclick="calculate()">Calculate</button>
+      <p id="result"></p>
+    </section>
+
+    <section>
+      <h2>Sample Shot Chart</h2>
+      <canvas id="shotChart" width="400" height="200"></canvas>
+    </section>
+  </div>
+
+  <script src="scripts.js"></script>
 </body>
 </html>
