--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🏀 Bestkeball Stats Dashboard</h1>
+    <h1>🏀 Bastkeball Stats Dashboard</h1>
 
     <section>
       <h2>Free Throw % Calculator</h2>
