--- a/historical.html
+++ b/historical.html
@@ -2,14 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Historical Statistics</title>
+  <title>Historical Stats</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <h1>📊 Historical Statistics</h1>
-    <p>Here you’ll display past game data, charts, player trends, and more.</p>
+    <table id="statsTable">
+      <thead>
+        <tr>
+          <th>Player</th>
+          <th>Points</th>
+          <th>Rebounds</th>
+          <th>Assists</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
     <a href="index.html">← Back to Dashboard</a>
   </div>
+
+  <script>
+    fetch('boxscore.json')
+      .then(res => res.json())
+      .then(data => {
+        const tbody = document.querySelector('#statsTable tbody');
+        data.forEach(row => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `<td>${row.player}</td><td>${row.points}</td><td>${row.rebounds}</td><td>${row.assists}</td>`;
+          tbody.appendChild(tr);
+        });
+      });
+  </script>
 </body>
 </html>
