--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Top ESPN-style nav -->
+  <div class="top-nav">
+    <div class="left-section">
+      <span>🏀 NBA</span>
+      <span>🏈 NFL</span>
+      <span>⚽ Football</span>
+      <span>🏉 Rugby</span>
+    </div>
+    <div class="right-section">
+      <span>Listen</span>
+      <span>Search 🔍</span>
+      <span>👤</span>
+    </div>
+  </div>
+
+  <!-- Sub-nav specific to your dashboard -->
+  <div class="sub-nav">
+    <span><a href="index.html">Home</a></span>
+    <span><a href="historical.html">Historical Stats</a></span>
+    <span><a href="calculator.html">Advanced Calculator</a></span>
+  </div>
+
   <div class="container">
     <h1>🏀 Basketball Stats Dashboard</h1>
     <p>Welcome! Explore basketball statistics and data-driven insights.</p>
