--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Top ESPN-style nav -->
-  <div class="top-nav">
-    <div class="left-section">
-      <span>🏀 NBA</span>
-      <span>🏈 NFL</span>
-      <span>⚽ Football</span>
-      <span>🏉 Rugby</span>
-    </div>
-    <div class="right-section">
-      <span>Listen</span>
-      <span>Search 🔍</span>
-      <span>👤</span>
-    </div>
-  </div>
-
-  <!-- Sub-nav specific to your dashboard -->
+  <!-- Sub-nav with dropdown -->
   <div class="sub-nav">
     <span><a href="index.html">Home</a></span>
     <span><a href="historical.html">Historical Stats</a></span>
     <span><a href="calculator.html">Advanced Calculator</a></span>
+
+    <!-- Dropdown menu -->
+    <div class="dropdown">
+      <button class="dropbtn">Teams ▼</button>
+      <div class="dropdown-content">
+        <a href="#">Lions</a>
+        <a href="#">Eagles</a>
+        <a href="#">Sharks</a>
+        <a href="#">Tigers</a>
+      </div>
+    </div>
   </div>
 
   <div class="container">
