--- a/historical.html
+++ b/historical.html
@@ -6,6 +6,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Sub-nav with dropdown -->
+  <div class="sub-nav">
+    <span><a href="index.html">Home</a></span>
+    <span><a href="historical.html">Historical Stats</a></span>
+    <span><a href="calculator.html">Advanced Calculator</a></span>
+
+    <!-- Dropdown menu -->
+    <div class="dropdown">
+      <button class="dropbtn">Teams ▼</button>
+      <div class="dropdown-content">
+        <a href="#">Lions</a>
+        <a href="#">Eagles</a>
+        <a href="#">Sharks</a>
+        <a href="#">Tigers</a>
+      </div>
+    </div>
+  </div>
+  
   <div class="container">
     <h1>📊 Historical Box Score</h1>
 
