--- a/historical.html
+++ b/historical.html
@@ -6,6 +6,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Top ESPN-style nav -->
+  <div class="top-nav">
+    <div class="left-section">
+      <span>🏀 NBA</span>
+      <span>🏈 NFL</span>
+      <span>⚽ Football</span>
+      <span>🏉 Rugby</span>
+    </div>
+    <div class="right-section">
+      <span>Listen</span>
+      <span>Search 🔍</span>
+      <span>👤</span>
+    </div>
+  </div>
+  
   <!-- Sub-nav with dropdown -->
   <div class="sub-nav">
     <span><a href="index.html">Home</a></span>
