--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
   
   <!-- Sub-nav with dropdown -->
   <div class="sub-nav">
-    <span><a href="index.html">Home</a></span>
-    <span><a href="historical.html">Historical Stats</a></span>
-    <span><a href="calculator.html">Advanced Calculator</a></span>
+    <a href="index.html">Home</a>
+    <a href="historical.html">Historical Stats</a>
+    <a href="calculator.html">Advanced Calculator</a>
 
-    <!-- Dropdown menu -->
     <div class="dropdown">
-      <button class="dropbtn">Teams ▼</button>
+      <a href="#" class="dropbtn">Teams ▼</a>
       <div class="dropdown-content">
         <a href="#">Lions</a>
         <a href="#">Eagles</a>
