--- a/historical.html
+++ b/historical.html
@@ -54,9 +54,20 @@
         <tr>
           <th>Team</th>
           <th>Player</th>
-          <th>Points</th>
-          <th>Rebounds</th>
-          <th>Assists</th>
+          <th>Min</th>
+          <th>FG</th>
+          <th>3PT</th>
+          <th>FT</th>
+          <th>OR</th>
+          <th>DR</th>
+          <th>TR</th>
+          <th>AS</th>
+          <th>ST</th>
+          <th>BLK</th>
+          <th>TO</th>
+          <th>PF</th>
+          <th>+/-</th>
+          <th>PTS</th>
         </tr>
       </thead>
       <tbody></tbody>
