--- a/calculator.html
+++ b/calculator.html
@@ -10,10 +10,8 @@
   <!-- Top ESPN-style nav -->
   <div class="top-nav">
     <div class="left-section">
-      <span>🏀 NBA</span>
-      <span>🏈 NFL</span>
-      <span>⚽ Football</span>
-      <span>🏉 Rugby</span>
+      <span>MABA</span>
+      <span>FIBA</span>
     </div>
     <div class="right-section">
       <span>Listen</span>
@@ -29,12 +27,12 @@
     <a href="calculator.html">Advanced Calculator</a>
 
     <div class="dropdown">
-      <a href="#" class="dropbtn">Teams ▼</a>
+      <a href="#" class="dropbtn">Competition ▼</a>
       <div class="dropdown-content">
-        <a href="#">Lions</a>
-        <a href="#">Eagles</a>
-        <a href="#">Sharks</a>
-        <a href="#">Tigers</a>
+        <a href="#">MABA Cup</a>
+        <a href="#">National U17</a>
+        <a href="#">National U15</a>
+        <a href="#">Agong Cup</a>
       </div>
     </div>
   </div>
