--- a/historical.html
+++ b/historical.html
@@ -48,30 +48,37 @@
       <button onclick="filterHighScorers()">Points > 10</button>
     </div>
 
-    <!-- Box Score Table -->
-    <table id="statsTable">
-      <thead>
-        <tr>
-          <th>Team</th>
-          <th>Player</th>
-          <th>Min</th>
-          <th>FG</th>
-          <th>3PT</th>
-          <th>FT</th>
-          <th>OR</th>
-          <th>DR</th>
-          <th>TR</th>
-          <th>AS</th>
-          <th>ST</th>
-          <th>BLK</th>
-          <th>TO</th>
-          <th>PF</th>
-          <th>+/-</th>
-          <th>PTS</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+ <script>
+    fetch('boxscore.json')
+      .then(res => res.json())
+      .then(data => {
+        const tbody = document.querySelector('#statsTable tbody');
+        tbody.innerHTML = '';
+
+        data.forEach(p => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${p.team}</td>
+            <td>${p.player}</td>
+            <td>${p.min}</td>
+            <td>${p.fg}</td>
+            <td>${p['3pt']}</td>
+            <td>${p.ft}</td>
+            <td>${p.oreb}</td>
+            <td>${p.dreb}</td>
+            <td>${p.reb}</td>
+            <td>${p.ast}</td>
+            <td>${p.stl}</td>
+            <td>${p.blk}</td>
+            <td>${p.to}</td>
+            <td>${p.pf}</td>
+            <td>${p.plusminus >= 0 ? '+' + p.plusminus : p.plusminus}</td>
+            <td>${p.pts}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+      });
+  </script>
 
     <a href="index.html">← Back to Dashboard</a>
   </div>
