--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Top ESPN-style nav -->
   <div class="top-nav">
     <div class="left-section">
-      <span>MABA</span>
+      <a href="https://maba.web.geniussports.com/"><span>MABA</span></a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
