--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Top ESPN-style nav -->
   <div class="top-nav">
     <div class="left-section">
-      <a href="https://maba.web.geniussports.com/"><span>MABA</span></a>
+      <a href="https://www.maba.com.my" target="_blank" style="color: white; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
