--- a/historical.html
+++ b/historical.html
@@ -10,7 +10,7 @@
   <!-- Top ESPN-style nav -->
   <div class="top-nav">
     <div class="left-section">
-      <span>MABA</span>
+      <a href="https://www.maba.com.my" target="_blank" style="color: white; text-decoration: none;">MABA</a>
       <span>FIBA</span>
     </div>
     <div class="right-section">
