--- a/historical.html
+++ b/historical.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
   <title>Historical Stats</title>
   <link rel="stylesheet" href="style.css" />
@@ -49,6 +50,7 @@
     </div>
 
     <!-- Box Score Table -->
+    <div class="table-wrapper">
     <table id="statsTable">
       <thead>
         <tr>
@@ -74,6 +76,7 @@
     </table>
 
     <a href="index.html">← Back to Dashboard</a>
+  </div>
   </div>
 
   <!-- JS Script -->
