--- a/historical.html
+++ b/historical.html
@@ -6,6 +6,7 @@
   <title>Historical Stats</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <!-- Top ESPN-style nav -->
