--- a/historical.html
+++ b/historical.html
@@ -65,21 +65,29 @@
     <table id="statsTable">
       <thead>
         <tr>
-          <th>Team</th>
           <th>Player</th>
-          <th>MIN</th>
-          <th>FG</th>
-          <th>3PT</th>
-          <th>FT</th>
-          <th>OREB</th>
-          <th>DREB</th>
-          <th>REB</th>
-          <th>AST</th>
-          <th>STL</th>
-          <th>BLK</th>
+          <th>Competition</th>
+          <th>Year</th>
+          <th>Team</th>
+          <th>GP</th>
+          <th>Min</th>
+          <th>FGA</th>
+          <th>FGM</th>
+          <th>2FGA</th>
+          <th>2FGM</th>
+          <th>3FGA</th>
+          <th>3FGM</th>
+          <th>FTA</th>
+          <th>FTM</th>
+          <th>OR</th>
+          <th>DR</th>
+          <th>TR</th>
+          <th>AS</th>
           <th>TO</th>
+          <th>ST</th>
+          <th>BS</th>
           <th>PF</th>
-          <th>+/-</th>
+          <th>FD</th>
           <th>PTS</th>
         </tr>
       </thead>
