--- a/historical.html
+++ b/historical.html
@@ -6,6 +6,7 @@
   <title>Historical Stats</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
   <!-- Top ESPN-style nav -->
@@ -100,42 +101,40 @@
 <script>
   let originalData = [];
 
-  fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
-    .then(response => response.text())
-    .then(csv => {
-      const rows = csv.trim().split('\n').slice(1); // Skip header
-      originalData = rows.map(row => {
-        const cols = row.split(',');
-        return {
-          player: cols[0],
-          competition: cols[1],
-          year: parseInt(cols[2]),
-          team: cols[3],
-          gp: parseInt(cols[4]),
-          min: parseInt(cols[5]),
-          fga: parseInt(cols[6]),
-          fgm: parseInt(cols[7]),
-          fga2: parseInt(cols[8]),
-          fgm2: parseInt(cols[9]),
-          fga3: parseInt(cols[10]),
-          fgm3: parseInt(cols[11]),
-          fta: parseInt(cols[12]),
-          ftm: parseInt(cols[13]),
-          oreb: parseInt(cols[14]),
-          dreb: parseInt(cols[15]),
-          treb: parseInt(cols[16]),
-          as: parseInt(cols[17]),
-          to: parseInt(cols[18]),
-          st: parseInt(cols[19]),
-          bs: parseInt(cols[20]),
-          pf: parseInt(cols[21]),
-          fd: parseInt(cols[22]),
-          pts: parseInt(cols[23])
-        };
-      });
+ fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
+  .then(response => response.text())
+  .then(csv => {
+    const parsed = Papa.parse(csv, { header: true });
+    originalData = parsed.data.map(row => ({
+      player: row['player'],
+      competition: row['competition'],
+      year: parseInt(row['year']),
+      team: row['team'],
+      gp: parseInt(row['gp']),
+      min: parseInt(row['min']),
+      fga: parseInt(row['fga']),
+      fgm: parseInt(row['fgm']),
+      fga2: parseInt(row['2fga']),
+      fgm2: parseInt(row['2fgm']),
+      fga3: parseInt(row['3fga']),
+      fgm3: parseInt(row['3fgm']),
+      fta: parseInt(row['fta']),
+      ftm: parseInt(row['ftm']),
+      oreb: parseInt(row['or']),
+      dreb: parseInt(row['dr']),
+      treb: parseInt(row['tr']),
+      as: parseInt(row['as']),
+      to: parseInt(row['to']),
+      st: parseInt(row['st']),
+      bs: parseInt(row['bs']),
+      pf: parseInt(row['pf']),
+      fd: parseInt(row['fd']),
+      pts: parseInt(row['pts'])
+    }));
 
-      renderTable(originalData);
-    });
+    renderTable(originalData);
+  });
+
 
   function renderTable(data) {
     const tbody = document.querySelector('#statsTable tbody');
