--- a/historical.html
+++ b/historical.html
@@ -106,30 +106,30 @@
   .then(csv => {
     const parsed = Papa.parse(csv, { header: true });
     originalData = parsed.data.map(row => ({
-      player: row['player'],
-      competition: row['competition'],
-      year: parseInt(row['year']),
-      team: row['team'],
-      gp: parseInt(row['gp']),
-      min: parseInt(row['min']),
-      fga: parseInt(row['fga']),
-      fgm: parseInt(row['fgm']),
-      fga2: parseInt(row['2fga']),
-      fgm2: parseInt(row['2fgm']),
-      fga3: parseInt(row['3fga']),
-      fgm3: parseInt(row['3fgm']),
-      fta: parseInt(row['fta']),
-      ftm: parseInt(row['ftm']),
-      oreb: parseInt(row['or']),
-      dreb: parseInt(row['dr']),
-      treb: parseInt(row['tr']),
-      as: parseInt(row['as']),
-      to: parseInt(row['to']),
-      st: parseInt(row['st']),
-      bs: parseInt(row['bs']),
-      pf: parseInt(row['pf']),
-      fd: parseInt(row['fd']),
-      pts: parseInt(row['pts'])
+      player: row['Player'],
+      competition: row['Competition'],
+      year: parseInt(row['Year']),
+      team: row['Team'],
+      gp: parseInt(row['GP']),
+      min: parseInt(row['Min']),
+      fga: parseInt(row['FGA']),
+      fgm: parseInt(row['FGM']),
+      fga2: parseInt(row['2FGA']),
+      fgm2: parseInt(row['2FGM']),
+      fga3: parseInt(row['3FGA']),
+      fgm3: parseInt(row['3FGM']),
+      fta: parseInt(row['FTA']),
+      ftm: parseInt(row['FTM']),
+      oreb: parseInt(row['OR']),
+      dreb: parseInt(row['DR']),
+      treb: parseInt(row['TR']),
+      as: parseInt(row['AS']),
+      to: parseInt(row['TO']),
+      st: parseInt(row['ST']),
+      bs: parseInt(row['BS']),
+      pf: parseInt(row['PF']),
+      fd: parseInt(row['FD']),
+      pts: parseInt(row['PTS'])
     }));
 
     renderTable(originalData);
