--- a/historical.html
+++ b/historical.html
@@ -218,18 +218,19 @@ function renderTable(data) {
   
     let filtered = originalData;
 
-    if (comp !== "All") {
+    if (comp && comp !== "All") {
       filtered = filtered.filter(p => p.competition === comp);
     }
 
-    if (year !== "All") {
+    if (year && year !== "All") {
       filtered = filtered.filter(p => p.year.toString() === year);
     }
   
     if (player) {
       filtered = filtered.filter(p => p.player.toLowerCase().includes(player));
     }
-  
+
+    currentPage = 1；
     renderTable(filtered);
   }
 </script>
