--- a/historical.html
+++ b/historical.html
@@ -56,6 +56,7 @@
 
   <label for="yearSelect">Year:</label>
   <select id="yearSelect">
+    <option value="">Select Year</option>
     <option value="2024">2024</option>
     <option value="2025">2025</option>
     <option value="All">All</option>
