--- a/historical.html
+++ b/historical.html
@@ -68,9 +68,8 @@
   <button onclick="filterByCompetition()">Search</button>
 </div>
 
-
     <!-- Box Score Table -->
-    <div class="table-wrapper">
+ <div class="table-wrapper">
     <table id="statsTable">
       <thead>
         <tr>
@@ -104,7 +103,7 @@
     </table>
 
     <!-- pagination -->
-    <div id="pagination" style="margin-top: 20px; text-align: center;">
+    <div id="pagination" class="pagination">
       <button onclick="changePage(-1)">Previous</button>
       <span id="pageInfo">Page 1</span>
       <button onclick="changePage(1)">Next</button>
