--- a/historical.html
+++ b/historical.html
@@ -62,8 +62,10 @@
     <option value="All">All</option>
   </select>
 
-  <label for="playerInput">Player:</label>
-  <input type="text" id="playerInput" placeholder="Enter player name" />
+  <div class="player-search">
+    <label for="playerInput">Player:</label>
+    <input type="text" id="playerInput" placeholder="Enter player name" />
+  </div>
 
   <button onclick="filterByCompetition()">Search</button>
 </div>
